--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
-
+    <title>briannadsilva</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="assets/icon.png" rel="icon">
 </head>
 <body>
-    <h1>Header one</h1>
-    <p>Hello World</p>
+    <h1>briannadsilva</h1>
+    <p>Welcome To My Site.</p>
 </body>
 </html>
