--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link href="assets/icon.png" rel="icon">
 </head>
 <body>
-    <h1>briannadsilva</h1>
-    <p>Welcome To My Site.</p>
+    <div class="container">
+        <div class="welcome">
+            <h1>briannadsilva</h1>
+            <h3>Welcome To My Site.</h3>
+        </div>
+    </div>
+    
 </body>
 </html>
