--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <h1>briannadsilva</h1>
             <h3>Welcome To My Site.</h3>
         </div>
+        <br>
+        <div class="quote">
+            <quote-text>Creativity is allowing yourself to make mistakes. Art is knowing which ones to keep.</quote-text>
+            <p>~ Scott Adams</p>
+        </div>
     </div>
     
 </body>
