added linkedin link to nav

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- end of imports for bootstrap -->
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="assets/icon.png" rel="icon">
 </head>
@@ -26,6 +28,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="https://www.linkedin.com/in/briannadsilva/" target="_blank"><i id="linkedin" class="fab fa-linkedin"></i></a></a>
+            </li>            
             <li class="nav-item">
               <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
             </li>
@@ -41,7 +46,7 @@
         <br>
 
         <div class="row">
-            <div class="col-sm-5 bg-white">
+            <div class="col-sm-4 bg-white">
                     <h1>briannadsilva</h1>
                     <br>
                     <h3>Welcome To My Site.</h3>
