added education and experience

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <br>
 
-        <div class="row">
+        <div class="row" id="welcome">
             <div class="col-sm-4 bg-white">
                     <h1>briannadsilva</h1>
                     <br>
@@ -55,8 +55,19 @@
                     <quote-text>Creativity is allowing yourself to make mistakes. Art is knowing which ones to keep.</quote-text>
                     <p>~ Scott Adams</p>
             </div>
-            <div class="col"></div>
+        </div>
+        <div class="row" id="about">
+          <div class="col-sm-4 bg-white">
+            <h3>Education</h3>
+            <p>I am a third year International Economics and Finance Student at Ryerson University.</p>
+            <img src="assets/img/ryerson_logo.svg"/>
           </div>
+          <div class="col-sm-4 bg-white">
+            <h3>Experience</h3>
+            <p>Since first year I have been working various divisions in Scotiabank, such as Global Banking Markets and Global Wealth Management</p>
+            <img src="/assets/img/scotiabank-logo-red-desktop-Height25px.svg"/>
+          </div>
+        </div>
     </div>
 
 
