--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
                 <a class="nav-link" href="https://www.linkedin.com/in/briannadsilva/" target="_blank"><i id="linkedin" class="fab fa-linkedin"></i></a></a>
             </li>            
             <li class="nav-item">
-              <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Experience</a>
+              <a class="nav-link" href="/Resume.pdf" target="_blank">Resume <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
