--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="col-sm-4 bg-white">
             <h3>Experience</h3>
-            <p>Since first year I have been working various divisions in Scotiabank, such as Global Banking Markets and Global Wealth Management</p>
+            <p>Since first year I have been working various divisions in Scotiabank, such as Global Banking and Markets, and Global Wealth Management</p>
             <img src="/assets/img/scotiabank-logo-red-desktop-Height25px.svg"/>
           </div>
         </div>
