--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
           </div>
           <div class="col-sm-4 bg-white">
             <h3>Experience</h3>
-            <p>Since first year I have been working various divisions in Scotiabank, such as Global Banking and Markets, and Global Wealth Management</p>
+            <p>Since first year I have been working various divisions in Scotiabank, such as Global Banking and Markets, and Global Wealth Management.</p>
             <img src="/assets/img/scotiabank-logo-red-desktop-Height25px.svg"/>
+          </div>
+          <div class="col-sm-3 bg-white">
+            <h3>Organizations</h3>
+            <p>I am a currently a program rep for third-year International Economics and Finance students.</p>
           </div>
         </div>
     </div>
